--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,23 +4,24 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.93"
-axum = "0.7.9"
+anyhow = "1.0.95"
+axum = "0.8.1"
 base64 = "0.22.1"
 dotenvy = "0.15.7"
 enum-map = "2.7.3"
-maud = { version = "0.26.0", features = ["axum"] }
+listenfd = "1.0.2"
+maud = { version = "0.27.0", features = ["axum"] }
 mime_guess = "2.0.5"
 nanoid = "0.4.0"
-once_cell = "1.20.2"
-reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
+once_cell = "1.20.3"
+reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
 resvg = "0.44.0"
 rust-embed = { version = "8.5.0", features = ["axum"] }
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.133"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
 serde_variant = "0.1.3"
 textwrap = "0.16.1"
-tokio = { version = "1.41.1", features = ["full"] }
+tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
@@ -29,8 +30,12 @@ urlencoding = "2.1.3"
 [lints.rust]
 dead_code = "allow"
 
-[profile.dev]
-debug = 0
-
 [profile.release]
 strip = true
+
+[profile.dev]
+opt-level = 1
+debug = 0
+
+[profile.dev.package."*"]
+opt-level = 3
