--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,4 +1,7 @@
-edition = "2021"
+# https://rust-lang.github.io/rustfmt/
 max_width = 100
 use_small_heuristics = "Max"
 tab_spaces = 2
+unstable_features = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Module"
